# nrf52dk-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: bn7hq6szs2brj0z0hmm9m1silqch75fv-source  prczvbf3maz0g2k7ivjslfjrmrgzynz1-source  zwbw7dknw89ai257hicmwv8lhid3qb62-source
src/: lib.rs
tests/: integration.rs
